--- a/src/app/ContetntFeature/components/iseeq-clients/iseeq-clients.component.html
+++ b/src/app/ContetntFeature/components/iseeq-clients/iseeq-clients.component.html
@@ -1,78 +1,31 @@
 <div class="site-base2">
     <h2 class="site-title">CLIENTS</h2>
     <div class="client-container">
-        <app-iseeq-projektor [membersCentered]=true [projektorWidth]=projectorWidth [statusBar]=true [startPosition]="1" buttonSource="/assets/pictures/ikon/arrow-full_green.svg" >
+        <app-iseeq-projektor [membersCentered]=true [projektorWidth]=projectorWidth [statusBar]=true [startPosition]="0" buttonSource="/assets/pictures/ikon/arrow-full_green.svg" >
                 <app-iseeq-projectable>
                     <div class="clients-card">
-                            111111111111111111 1111111111111111111
-                        <div class="clients-logo">
-                
-                        </div>
-                
-                        <div class="clients-quote">
-                
-                        </div>
-                
-                        <div class="clients-data">
-                
-                            <div class="clients-data-picture">
-                
-                            </div>
-                
-                            <div class="clients-data-text">
-                
-                            </div>
                             
-                        </div>
-                
-                    </div>
-                </app-iseeq-projectable>
-
-                <app-iseeq-projectable>
-                    <div class="clients-card">
-                            22222222222222222 222222222222222
                         <div class="clients-logo">
-                
+                            <img src="./assets/pictures/clients/gizmo_media_group.jpg" alt="Gizmo Media Group logo">
                         </div>
                 
                         <div class="clients-quote">
-                
+                            <p> “IseeQ have been providing recruitment services for us for more than 3 years. 
+                                During this time they were always quickly adjusting to our changed priorities, 
+                                moreover, they even helped finetuning our hiring processes. Their up-to-date 
+                                feedback about the changes in the Hungarian job market makes them one of our most 
+                                valuable recruitment partners.” 
+                            </p>
                         </div>
                 
                         <div class="clients-data">
                 
                             <div class="clients-data-picture">
-                
+                                <img src="./assets/pictures/clients/eszpee_ping-300x300.jpg" alt="Peter Szasz">
                             </div>
                 
                             <div class="clients-data-text">
-                
-                            </div>
-                            
-                        </div>
-                
-                    </div>
-                </app-iseeq-projectable>
-
-                <app-iseeq-projectable>
-                    <div class="clients-card">
-                        3333333333333333 33333333333333333
-                        <div class="clients-logo">
-                
-                        </div>
-                
-                        <div class="clients-quote">
-                
-                        </div>
-                
-                        <div class="clients-data">
-                
-                            <div class="clients-data-picture">
-                
-                            </div>
-                
-                            <div class="clients-data-text">
-                
+                                <span class="bold">PETER SZÁSZ</span><br> Managing Director @ Gizmo Media Group /Budapest/
                             </div>
                             
                         </div>
@@ -81,7 +34,12 @@
                 </app-iseeq-projectable>
         </app-iseeq-projektor>
     </div>
-
-    
-
+    <div class="client-cities">
+        <img src="./assets/pictures/clients/01_budapest.png" alt="Budapest">
+        <img src="./assets/pictures/clients/02_coppenhagen.png" alt="Coppenhagen">
+        <img src="./assets/pictures/clients/03_berlin.png" alt="Berlin">
+        <img src="./assets/pictures/clients/04_amsterdam.png" alt="Amsterdam">
+        <img src="./assets/pictures/clients/05_paris.png" alt="Paris">
+        <img src="./assets/pictures/clients/06_hongkong.png" alt="Hon Kong">
+    </div>
 </div>
